# PyRedis---lightweight-concurrent-Redis-clone-that-communicates-over-TCP-sockets.

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  implementation_plan.md  pyproject.toml  pyredis.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: async_client_demo.py  build_image.ps1  stress_client.py
src/pyredis/: __init__.py  __main__.py  commands.py  config.py  datastore.py  errors.py  lru.py  persistence.py  protocol.py  server.py  skiplist.py  ttl.py  zset.py
tests/: __init__.py  conftest.py  helpers.py  test_benchmark.py  test_config.py  test_datastore.py  test_integration.py  test_persistence.py  test_protocol.py
